--- a/css/adduserform.css
+++ b/css/adduserform.css
@@ -36,10 +36,16 @@ body{
 .forminput{
     width: 240px;
     height: 25px;
-    margin: 5px 0 25px 0;
+    margin: 5px 0 15px 0;
     border-radius: 5px;
-    border: none;
+    border: 2px solid #656565;
+    outline: none;
     background-color: #656565;
+    color: #fff;
+    transition: .3s;
+}
+.forminput:focus{
+    border-color: #0267ff;
 }
 .checkbox{
     font-size: 15px;
@@ -69,6 +75,7 @@ body{
     border-radius: 10px;
     transition-duration: 0.4s;
     margin-bottom: 25px;
+    cursor: pointer;
 }
 .submitbtn:hover{
     background-color: #ff4d00;
@@ -89,4 +96,11 @@ body{
 .login a:hover{
     color: #ff4d00;
     transition-duration: 0.4s;
+}
+.span-required{
+    display: none;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #e63636;
+    margin-bottom: 10px;
 }
