--- a/css/loginuserform.css
+++ b/css/loginuserform.css
@@ -17,7 +17,7 @@ body{
 .mainform{
     background-color: #404040;
     text-align: center;
-    padding: 40px 0 10px 0;
+    padding: 60px 0 10px 0;
     width: 310px;
     border-radius: 10px;
     margin: auto;
@@ -28,15 +28,15 @@ body{
 }
 .formtext{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 22px;
     color: #fff;
     font-weight: 800;
     
 }
 .forminput{
-    width: 240px;
-    height: 25px;
-    margin: 5px 0 15px 0;
+    width: 250px;
+    height: 35px;
+    margin: 5px 0 50px 0;
     border-radius: 5px;
     border: 2px solid #656565;
     outline: none;
@@ -53,6 +53,8 @@ body{
     color: #fff;
     font-weight: 800;
     margin-bottom: 35px;
+    text-align: start;
+    margin-left: 2em;
 }
 .checkbox a{
     text-decoration: none;
@@ -74,36 +76,20 @@ body{
     border: none;
     border-radius: 10px;
     transition-duration: 0.4s;
-    margin-bottom: 25px;
+    margin: 10px 0 50px 0;
     cursor: pointer;
 }
 .submitbtn:hover{
     background-color: #ff4d00;
     transition-duration: 0.4s;
 }
-.login{
-    font-size: 22px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 800;
-    color: #fff;
-    margin: 100px auto 0 auto;
-    max-width: 320px;
-}
-.login a{
-    text-decoration: none;
-    color: #0267ff;
-    transition-duration: 0.4s;
-}
-.login a:hover{
-    color: #ff4d00;
-    transition-duration: 0.4s;
-}
+
 .span-required{
     display: none;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     color: #e63636;
-    margin-bottom: 10px;
+    margin: -40px 0 20px 0;
 }
 
 
@@ -113,45 +99,30 @@ body{
     .mainform{
         box-shadow:  31px 31px 62px #181818,
              -31px -31px 62px #252525;
+
+        
     }
 }
-
-@media only screen and (max-width: 768px){
-
-    .adduserimg{
-        display: none;
-        opacity: 0;
-    }
-    .adduserimg img{
-        display: none;
-        opacity: 0;
-    }   
-}
-
 @media only screen and (min-width: 769px){
 
     .backgroundform{
         width: 500px;
         background-color: #2c2c2c;
-          
+        margin: 10em 0 15em 0;
+        border-radius: 15px;
     }
     .backgroundform img{
-        margin-top: 92px;
+        margin-top: 20px;
+    }
+    .mainform{
+        margin-bottom: 120px;
     }
     body{
-        background-image: url("../imgs/adduserimg.jpg");
+        background-image: url("../imgs/loginuserimg.jpg");
         background-size: auto;
         background-repeat: no-repeat;   
     }
     
-    .mainadduser{
-        display: flex;
-        justify-content: space-between;
-    }
-    .login{
-        max-width: 450px;
-        margin-bottom: 80px;
-    }
     .footercolor{
         margin-top: 0px;
     }
