--- a/Views/index.html
+++ b/Views/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/cssreset.css">
     <link rel="stylesheet" href="../css/cssheader.css">
     <link rel="stylesheet" href="../css/cssfooter.css">
+    <link rel="stylesheet" href="../css/cssindex.css">
     <link rel="stylesheet" type="text/css" href="../css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../imgs/logo header img.png">
     <title>MOD TUNER</title>
@@ -34,7 +35,7 @@
                         <i class="fa-solid fa-circle-user"></i>
                         <h4>Criar conta</h4>
                     </a>
-                    
+
 
                 </div>
 
@@ -57,7 +58,8 @@
             </div>
 
             <div class="cadastrows">
-                <a href="./adduser.html" class="cadastrowstext">Criar conta <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="./adduser.html" class="cadastrowstext">Criar conta <i
+                        class="fa-solid fa-chevron-right"></i></a>
             </div>
         </div>
 
@@ -65,7 +67,53 @@
     </header>
 
     <main>
+        <div class="slider-contain">    <!-- slideshow container -->
 
+            <!-- Imgs full width and text -->
+
+            <div class="slide">
+                <img src="../imgs/index slide-1.jpg" alt="" srcset="">
+                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
+                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+            </div>
+
+            <div class="slide">
+                <img src="../imgs/index slide-2.jpg" alt="" srcset="">
+                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
+                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+            </div>
+
+            <div class="slide">
+                <img src="../imgs/index slide-3.jpg" alt="" srcset="">
+                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
+                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+            </div>
+
+            <div class="slide">
+                <img src="../imgs/index slide-4.jpg" alt="" srcset="">
+                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
+                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+            </div>
+
+            <div class="slide">
+                <img src="../imgs/index slide-5.jpg" alt="" srcset="">
+                <div class="text">Seu carro do jeito que voçê sempre quis!</div>
+                <div class="subtext">Temos o maior estoque de peças e acessórios</div>
+            </div>
+
+        </div>
+
+        <!-- The dots/circles -->
+
+        <div class="dots">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+        </div>
+
+        
     </main>
 
     <footer class="footercolor">
@@ -105,6 +153,7 @@
 
     <script src="https://kit.fontawesome.com/792acc9727.js" crossorigin="anonymous"></script>
     <script src="../js/menuheaderToggle.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
