--- a/css/loginuserform.css
+++ b/css/loginuserform.css
@@ -24,7 +24,7 @@ body{
 }
 .inputs{
     text-align: start;
-    margin-left: 2em;
+    margin-left: 1.7em;
 }
 .formtext{
     font-family: Arial, Helvetica, sans-serif;
@@ -48,23 +48,18 @@ body{
     border-color: #0267ff;
 }
 .checkbox{
-    font-size: 15px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
     font-weight: 800;
     margin-bottom: 35px;
     text-align: start;
-    margin-left: 2em;
+    margin-left: 1.3em;
 }
-.checkbox a{
-    text-decoration: none;
-    color: #0267ff;
-    transition-duration: 0.4s;
+.checkTPP{
+    cursor: pointer;
 }
-.checkbox a:hover{
-    color: #ff4d00;
-    transition-duration: 0.4s;
-}
+
 .submitbtn{
     width: 210px;
     height: 60px;
@@ -76,7 +71,7 @@ body{
     border: none;
     border-radius: 10px;
     transition-duration: 0.4s;
-    margin: 10px 0 50px 0;
+    margin: 10px 0 40px 0;
     cursor: pointer;
 }
 .submitbtn:hover{
@@ -94,7 +89,7 @@ body{
 
 
 
-@media only screen and (min-width: 375px){
+@media only screen and (min-width: 375px) and (max-width: 768px){
 
     .mainform{
         box-shadow:  31px 31px 62px #181818,
@@ -106,23 +101,39 @@ body{
 @media only screen and (min-width: 769px){
 
     .backgroundform{
-        width: 500px;
+        width: 450px;
         background-color: #2c2c2c;
         margin: 10em 0 15em 0;
         border-radius: 15px;
+    }
+    .mainform{
+        background-color: transparent;
+        margin-bottom: 80px;
+    }
+    .forminput{
+        width: 300px;
+    }
+    .inputs{
+        margin-left: 0em;
+    }
+    .checkbox{
+        margin-left: 0em;
+    }
+    .submitbtn{
+        width: 250px;
+        margin: 70px 0 0 0;
     }
     .backgroundform img{
         margin-top: 20px;
     }
     .mainform{
-        margin-bottom: 120px;
+        margin-bottom: 90px;
     }
     body{
         background-image: url("../imgs/loginuserimg.jpg");
         background-size: auto;
         background-repeat: no-repeat;   
     }
-    
     .footercolor{
         margin-top: 0px;
     }
