--- a/css/cssindex.css
+++ b/css/cssindex.css
@@ -410,4 +410,186 @@ input[type="checkbox"][id^="check-brand"] {
     }
     
 }
-/* menu filter start */
+/* menu filter end */
+
+/* product grid start */
+
+.product-grid-title{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.grid{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.product-card{
+    width: 270px;
+    height: 390px;
+    background-color: #1f1f1f;
+    border-radius: 15px;
+    margin: 1.5em auto 4em;
+    box-shadow:  12px 12px 40px #161616,
+                -12px -12px 40px #282828; 
+}
+
+.product-grid-1 .product-grid-title{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.product-grid-title{
+    visibility: visible;
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.5em;
+}
+
+.product-grid-title p{
+    visibility: visible;
+    opacity: 1;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    color: #fff;
+    margin: 0 0.5em 0 0.7em;
+}
+
+.product-grid-title .title-border{
+    width: 100%;
+    height: 10px;
+    background-color: #0267ff;
+    border-radius: 10px;
+    
+}
+
+.product-grid-5 .product-grid-title p{
+    text-align: center;
+    margin: 0 0.3em 0 0.2em;
+}
+
+@media only screen and (min-width: 680px){
+
+    .product-grid-1 .product-grid-title{
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .product-grid-1 .product-grid-title p{
+        margin-left: 2em;
+    }
+
+    .main-grid{
+        display: grid;
+        grid-template-columns: 350px 1fr;
+          
+    }
+
+    .product-grid-2, .product-grid-3{
+        grid-column: 1/3;
+    }
+
+    .element-filter2 h5, .element-filter3 h5, .element-filter4 h5, .element-filter5 h5{
+
+        margin-top: 6.3em;
+        margin-bottom: 6.3em;
+    }
+    
+ 
+}
+@media only screen and (min-width: 890px){
+
+    .product-grid-2{
+        grid-column: 2/3;
+        grid-row: 2;
+    }
+    .action-filter{
+        grid-row: 1/4;
+    }
+
+    .element-filter2 h5, .element-filter3 h5, .element-filter4 h5, .element-filter5 h5{
+
+        margin-top: 6.8em;
+        margin-bottom: 6.8em;
+    }
+}
+@media only screen and (min-width: 1160px){
+    
+    .product-grid-3{
+        grid-column: 2/3;
+        grid-row: 3;
+    }
+
+    .product-grid-1 .grid, .product-grid-2 .grid, .product-grid-3 .grid{
+        max-width: 1075px;
+        
+    }
+    .product-grid-1, .product-grid-2, .product-grid-3{
+        margin: 0 auto;
+    }
+
+    .element-filter2 h5, .element-filter3 h5, .element-filter4 h5, .element-filter5 h5{
+
+        margin-top: 7.2em;
+        margin-bottom: 7.2em;
+    }
+}
+/* product grid end */
+
+/* product card start */
+.product-img{
+    text-align: center;
+    margin-top: 1em;
+}
+.product-img img{
+    width: 175px;
+    height: 160px;
+    border-radius: 10px;
+}
+.product-descripion p{
+    color: #fff;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    width: 11em;
+    margin: 1em 0 1em 1em;
+}
+.product-price h5{
+    color: #ff4d00;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    margin-left: 0.5em;
+}
+.product-price h3{
+    font-size: 20px;
+    color: #6d6d6d;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    margin-left: 1em;
+    margin-top: -0.5em;
+}
+.product-buy-bnt{
+    text-align: center;
+    margin-top: 2.3em;
+}
+.product-buy-bnt a{
+    background-color: #0267ff;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1em 1.5em;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: 0.2s;
+    margin-top: 2em;
+}
+.product-buy-bnt a:hover{
+    background-color: #ff4d00;
+}
+/* product card end */
