Update product page!

--- a/Views/index.html
+++ b/Views/index.html
@@ -383,7 +383,7 @@
                         </div>
 
                         <div class="product-buy-bnt">
-                            <a href="">Comprar <i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="../Views/mecanica-produto1.html">Comprar <i class="fa-solid fa-cart-shopping"></i></a>
                         </div>
                     </div>
 
