--- a/css/cssindex.css
+++ b/css/cssindex.css
@@ -3,7 +3,6 @@
 .slider-contain {
     max-width: 100%;
     height: 30em;
-
     margin: 0 auto;
     transition: 0.4s;
 }
@@ -18,13 +17,12 @@
 .slide img {
     width: 100%;
     height: 100%;
-
+    object-fit: cover;
 }
 
 .text {
     color: #fff;
     font-size: 30px;
-
     margin-top: -11em;
     padding: 0 3px;
     font-family: Arial, Helvetica, sans-serif;
@@ -549,6 +547,7 @@ input[type="checkbox"][id^="check-brand"] {
     width: 175px;
     height: 160px;
     border-radius: 10px;
+    object-fit: cover;
 }
 .product-descripion p{
     color: #fff;
