New pages (PRE-ALPHA)

--- a/Views/adduser.html
+++ b/Views/adduser.html
@@ -54,7 +54,7 @@
 
             </div>
             
-            <p class="login">Já possui uma conta?<a href="loginuser.html">Faça Login.</a></p>
+            <p class="login">Já possui uma conta?<a href="../Views/loginuser.html">Faça Login.</a></p>
         </div>
     </main>
     <footer class="footercolor">
