--- a/Views/index.html
+++ b/Views/index.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <ul>
-                    <li><i class="fa-solid fa-cart-shopping"></i><a href="">Meu carrinho</a></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i><a href="../Views/my-cart.html">Meu carrinho</a></li>
                     <li><i class="fa-regular fa-comment-dots"></i><a href="">Suporte</a></li>
                     <li><i class="fa-solid fa-gear"></i><a href="">Configurações</a></li>
                     <li><i class="fa-solid fa-right-from-bracket"></i><a href="">Logout</a></li>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="cadastrows">
-                <a href="./adduser.html" class="cadastrowstext">Criar conta <i
+                <a href="../Views/adduser.html" class="cadastrowstext">Criar conta <i
                         class="fa-solid fa-chevron-right"></i></a>
             </div>
         </div>
