--- a/Views/mecanica-produto1.html
+++ b/Views/mecanica-produto1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/productpage.css">
     <link rel="stylesheet" type="text/css" href="../css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../imgs/logo header img.png">
-    <title>MOD TUNNER</title>
+    <title>Turbina Roletada Gtx3576r T3 A/r 0.63 - Garrett</title>
 </head>
 
 <body>
@@ -99,7 +99,7 @@
                                 <span class="number">01</span>
                                 <span class="plus">+</span>
                             </div>
-                            <button>Comprar <i class="fa-solid fa-cart-shopping"></i></button>
+                            <a href="../Views/my-cart.html">Comprar <i class="fa-solid fa-cart-shopping"></i></a>
                         </div>
                     </div>
 
